upgrade to neo4j 5: warning : this version is a wip and needs APOC and GDS plugins to run APOC and GDS should also be installed with maven --install cmd
- merge Violeta Seretan's hypernode feature with the ugraded code base
- upgrade clustering alogrithme in RelationService class. RelationService now uses GDS projections.
- improve globally db transaction initialisation and distribution trough the controllers (WIP).
- add a "testing" constructor to the GraphDatabaseServiceProvider class
- add gds/apoc to the pom.xml
- add gds/apoc jar files to the module classpath